--- a/style.css
+++ b/style.css
@@ -1,43 +1,3 @@
-@media (max-width: 800px) {
-  body {
-    flex-direction: column;
-  }
-
-  #city-list {
-    display: none;
-  }
-
-  #search {
-    margin: 0;
-    width: 90%;
-    position:fixed;
-    top: -100%;
-  }
-
-  #search-input {
-    margin: 5% 0;
-    width: 100%;
-    padding: 2.5%;
-    border: 2px solid rgba( 0, 0, 0, 0.3 );
-    border-radius: 15px;
-  }
-}
-
-@media (min-width: 801px) {
-  body {
-    flex-direction: row;
-  }
-  #search-input {
-    padding: 2.5% 0;
-    border: none;
-    width: 74%;
-  }  
-
-  #sidebar {
-    overflow: scroll;
-  }
-}
-
 *{
     margin:0;
     padding:0;
@@ -78,6 +38,9 @@ hr {
 
 #search-button {
   width: 25%;
+  padding: 10px;
+  border-radius: 20px;
+  border: none;
 }
 
 input::placeholder {
@@ -117,22 +80,31 @@ input::placeholder {
 }
 
 #sidebar {
+  display: flex;
+  flex-direction: column;
   flex: 1;
   padding: 5%;
-  height: 100vh;
-  background: rgba( 20, 20, 20, 0.4 );
-  backdrop-filter: blur( 20px );
-  -webkit-backdrop-filter: blur( 20px );
 }
 
 #sidebar-content {
   display: flex;
 }
 
+#sidebar-content > ul {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+#sidebar-content > ul > li {
+  min-width: 25%;
+  margin-right: 20px;
+}
+
 ul {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
 }
 
 li {
@@ -145,4 +117,87 @@ li {
 
 .li-left {
   color:rgba( 255, 255, 255, 0.3 );
+  margin-right: 10px;
+}
+
+@media (min-width: 801px) {
+  body {
+    flex-direction: row;
+  }
+
+  #search-input {
+    padding: 2.5% 0;
+    border: none;
+    width: 74%;
+  }
+
+  #sidebar {
+    overflow: scroll;
+    height: 100vh;
+    background: rgba(20, 20, 20, 0.4);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+  }
+}
+
+@media (max-width: 800px) {
+  body {
+    flex-direction: column-reverse;
+    max-height: 100vh;
+  }
+
+  #main {
+    display: flex;
+  }
+
+  #main-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  #current, h1 {
+    font-size: 4rem;
+    font-weight: 200;
+  }
+
+  #name-time {
+    order: 1;
+    width: 100%;
+    flex-grow: 3;
+  }
+
+  #current {
+    order: 2;
+  }
+
+  #icon-weather {
+    order: 3;
+  }
+
+  #name, h2 {
+    font-size: 2rem;
+  }
+
+  #sidebar {
+    height: 10vh;
+  }
+
+  #city-list {
+    display: none;
+  }
+
+  #search {
+    margin: 0;
+    width: 90%;
+    align-self: center;
+  }
+
+  #search-input {
+    margin: 5% 0;
+    width: 100%;
+    padding: 2.5%;
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
+  }
 }
